--- a/auth/package.json
+++ b/auth/package.json
@@ -7,7 +7,8 @@
         "start:dev": "nodemon src/index.ts",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
         "format": "prettier --plugin-search-dir . --write .",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "prepare": "husky install"
     },
     "keywords": [
         "microservice",
@@ -21,6 +22,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.11",
         "eslint": "^8.56.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -32,12 +34,25 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "husky": "^8.0.0",
         "jest": "^29.7.0",
+        "lint-staged": "^15.2.0",
         "nodemon": "^3.0.2",
         "prettier": "^3.2.2",
         "supertest": "^6.3.4",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
+    },
+    "lint-staged": {
+        "src/**/*.ts": [
+            "npm run lint",
+            "npm run format"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
     }
 }
